<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:background="@color/backgroundaccent"
        >


        <item
            android:id="@+id/cameraAtten"
            android:icon="@drawable/ic_camera0"
            android:title="Camera"/>
        <item
            android:id="@+id/myprofile"
            android:icon="@drawable/ic_profile2"
            android:title="@string/my_profile"/>
        <item
            android:id="@+id/chat"
            android:icon="@drawable/ic_chat2"
            android:title="@string/chat"/>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_setting2"
            android:title="@string/settings"/>


    </group>

</menu>