<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundaccent"
    tools:context=".activities.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarsingup"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/tvtitlesignup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="SIGN UP"
            android:textColor="@color/primary0"
            android:textSize="22sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbarsingup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:lottie_rawRes="@raw/ic_signupanimation"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Your Details To Sign Up with Us!!"
            android:textColor="@color/primary0"
            android:gravity="center"
            android:textSize="17sp"/>

        <soup.neumorphism.NeumorphCardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:neumorph_shapeType="flat"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">

                <soup.neumorphism.NeumorphCardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    app:neumorph_shapeType="pressed">

                    <EditText
                        android:id="@+id/et_signupname"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:inputType="textPersonName"
                        android:layout_marginStart="5dp"
                        android:hint="@string/name"
                        android:autofillHints="name"
                        android:layout_gravity="center"/>

                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    app:neumorph_shapeType="pressed">

                    <EditText
                        android:id="@+id/et_signupemail"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:inputType="textEmailAddress"
                        android:layout_marginStart="5dp"
                        android:hint="@string/email"
                        android:autofillHints="emailAddress"
                        android:layout_gravity="center"/>

                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    app:neumorph_shapeType="pressed">

                    <EditText
                        android:id="@+id/et_signuppassword"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginStart="5dp"
                        android:hint="@string/password"
                        android:autofillHints="password"
                        android:inputType="textPassword"
                        android:layout_gravity="center"/>

                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/btn_signupsignup"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="bottom|center"
                    app:neumorph_shapeType="flat">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_marginStart="20dp"
                        android:layout_height="wrap_content"
                        android:text="SIGN UP"
                        android:textColor="@color/primary"
                        android:layout_gravity="center"
                        android:textSize="19sp"
                        android:textStyle="bold"/>

                </soup.neumorphism.NeumorphCardView>

            </LinearLayout>

        </soup.neumorphism.NeumorphCardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>